--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,7 +40,7 @@ jobs:
             ${{ runner.os }}-
       - run: npm install
       - name: Test ${{ matrix.node-version }}
-        run: npm run lcov
+        run: npm run coverage
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
