--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "eslint",
     "build": "pegjs -o lib/resolv.peg.js lib/resolv.pegjs"
   },
-  "keywords": [],
+  "keywords": [
+    "resolv",
+    "resolv.conf",
+    "parser",
+    "grammar",
+    "dns",
+    "resolve",
+    "resolver"
+  ],
   "author": "Joe Hildebrand <joe-github@cursive.net>",
   "license": "MPL-2.0",
   "devDependencies": {
@@ -17,5 +25,8 @@
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "pegjs": "^0.10.0"
+  },
+  "engines": {
+    "node": ">=14.15"
   }
 }
