--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "resolv-conf",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
     "lint": "eslint",
-    "build": "pegjs -o lib/resolv.peg.js lib/resolv.pegjs"
+    "build": "pegjs -o lib/resolv.peg.js lib/resolv.pegjs",
+    "precheck": "npm run lint && npm run test",
+    "check": "npm pack --dry-run",
+    "release": "npm version patch && git push --follow-tags && npm publish"
   },
   "keywords": [
     "resolv",
@@ -19,7 +22,7 @@
     "resolver"
   ],
   "author": "Joe Hildebrand <joe-github@cursive.net>",
-  "license": "MPL-2.0",
+  "license": "MIT",
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-plugin-jest": "^24.1.3",
