--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint": "^7.16.0",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
-    "pegjs": "^0.10.0"
+    "pegjs": "^0.10.0",
+    "pegjs-backtrace": "^0.2.0"
   },
   "engines": {
     "node": ">=14.15"
