--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   "author": "Joe Hildebrand <joe-github@cursive.net>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^7.16.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.5",
     "jest": "^26.6.3",
     "pegjs": "^0.10.0",
-    "pegjs-backtrace": "^0.2.0"
+    "pegjs-backtrace": "^0.2.0",
+    "typescript": "^4.2.4"
   },
   "engines": {
     "node": ">=14.15"
