--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "lint": "eslint bin/* lib/*[!peg].js test/*.js",
-    "build": "pegjs -o lib/resolv.peg.js lib/resolv.pegjs",
+    "build": "peggy -o lib/resolv.peg.js lib/resolv.pegjs",
     "precheck": "npm run lint && npm run test",
     "check": "npm pack --dry-run",
     "release": "npm version patch && git push --follow-tags && npm publish"
@@ -33,8 +33,7 @@
     "eslint": "^7.24.0",
     "eslint-plugin-jest": "^24.3.5",
     "jest": "^26.6.3",
-    "pegjs": "^0.10.0",
-    "pegjs-backtrace": "^0.2.0",
+    "peggy": "^1.0.0",
     "typescript": "^4.2.4"
   },
   "engines": {
