--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.3",
   "description": "Parse resolv.conf files",
   "main": "./lib/index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --coverage",
-    "lint": "eslint bin/* lib/*[!peg].js test/*.js",
-    "build": "peggy -o lib/resolv.peg.js lib/resolv.pegjs",
+    "test": "ava",
+    "coverage": "c8 npm test",
+    "lint": "eslint .",
+    "build": "peggy --format es -o lib/resolv.peg.js lib/resolv.pegjs",
     "precheck": "npm run lint && npm run test",
     "check": "npm pack --dry-run",
     "release": "npm version patch && git push --follow-tags && npm publish"
@@ -30,13 +31,19 @@
   "author": "Joe Hildebrand <joe-github@cursive.net>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-plugin-jest": "^24.3.5",
-    "jest": "^26.6.3",
-    "peggy": "^1.0.0",
-    "typescript": "^4.2.4"
+    "@cto.af/eslint-config": "^4.0.2",
+    "@peggyjs/coverage": "1.0.0",
+    "ava": "^6.1.2",
+    "c8": "^9.1.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-jsdoc": "^48.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "peggy": "^4.0.2",
+    "pegjs-backtrace": "^0.2.1",
+    "typescript": "^5.4.5"
   },
+  "packageManager": "pnpm@9.0.6+sha512.f6d863130973207cb7a336d6b439a242a26ac8068077df530d6a86069419853dc1ffe64029ec594a9c505a3a410d19643c870aba6776330f5cfddcf10a9c1617",
   "engines": {
-    "node": ">=14.15"
+    "node": ">=18"
   }
 }
