--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: pnpm
       - run: pnpm install
+      - name: lint
+        run: npm run lint
+      - name: coverage
+        run: npm run coverage
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
