--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,18 +28,7 @@ jobs:
         run: npm run lint
       - name: coverage
         run: npm run coverage
-      - name: Coveralls Parallel
-        uses: coverallsapp/github-action@master
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
         with:
-          github-token: ${{ secrets.github_token }}
-          flag-name: node-${{ matrix.node-version }}
-          parallel: true
-  finish:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls Finished
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.github_token }}
-          parallel-finished: true
+          token: ${{ secrets.CODECOV_TOKEN }}
