--- a/test/resolv.conf
+++ b/test/resolv.conf
@@ -2,3 +2,11 @@
 ; to try out
 
   nameserver 10.1.1.1 # and a comment at the end
+search example.org. example.net.
+search example.net. example.org.
+sortlist 130.155.160.0/255.255.240.0 130.155.0.0
+sortlist 1.2.3.4/255.255.240.0
+
+options debug ndots:2 timeout:30 attempts:5 rotate no-aaaa no-check-names
+options inet6 ip6-bytestring no-ip6-dotint edns0 single-request
+options single-request-reopen no-tld-query use-vc no-reload trust-ad
