--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "license": "MIT",
   "devDependencies": {
     "@cto.af/eslint-config": "^4.0.2",
-    "@peggyjs/coverage": "1.0.0",
-    "@types/node": "20.12.7",
-    "ava": "^6.1.2",
+    "@peggyjs/coverage": "1.1.0",
+    "@types/node": "20.12.10",
+    "ava": "^6.1.3",
     "c8": "^9.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jsdoc": "^48.2.3",
@@ -39,7 +39,7 @@
     "pegjs-backtrace": "^0.2.1",
     "typescript": "^5.4.5"
   },
-  "packageManager": "pnpm@9.0.6+sha512.f6d863130973207cb7a336d6b439a242a26ac8068077df530d6a86069419853dc1ffe64029ec594a9c505a3a410d19643c870aba6776330f5cfddcf10a9c1617",
+  "packageManager": "pnpm@9.1.0",
   "engines": {
     "node": ">=18"
   }
